# computer_vision_mai

./: Algorithm.cpp  Recogniser.cpp  Send.cpp  Server.cpp  application.h  header.h  main (2).cpp  main.cpp
ClientRB/: CMakeLists.txt
ClientRB/inc/: alphabot.h
ClientRB/src/: Alphabot.cpp  Application.cpp
ServerRB/: CMakeLists.txt
